# Esercizi_SO

./: README.md
excercise_1/mini_core/: CMakeLists.txt
excercise_1/mini_core/executables/: CMakeLists.txt
excercise_1/mini_core/src/: CMakeLists.txt  files.txt
exercise_2/bonus_mio/: Automobile.c  Automobile.h  CMakeLists.txt  Camion.c  Camion.h  ParcoAuto.c  ParcoAuto.h  README.md  Veicolo.c  Veicolo.h  main.c
exercise_2/funcion_pointer/: funcion_pointer  function_pointer.c  function_pointer.h
exercise_2/linked_list/: CMakeCache.txt  CMakeLists.txt  Makefile  float_list.c  float_list.h  int_list.c  int_list.h  linked_list.c  linked_list.h  linked_list_exercise_1a  linked_list_exercise_1a.c  linked_list_exercise_1a.h  linked_list_test  linked_list_test.c  list_list.c  list_list.h
exercise_2/linked_list_polimorphic/: CMakeLists.txt  Makefile  linked_list.h  linked_list_exercise_3  linked_list_exercise_3.c  linked_list_exercise_3.h  linked_list_test
exercise_3/06_shaft_encoder_exercise/: Makefile  encoder.c  encoder.hex  encoder2.c  encoder2.elf  encoder2.hex
exercise_3/07_keyboard_exercise/: Makefile  keyboard.c  keyboard.elf  keyboard.hex  keyboard2.c  keyboard2.elf  keyboard2.hex
exercise_3/08_fullport_encoder_exercise/: full_encoder.c  full_encoder.elf  full_encoder.hex
exercise_3/mio_bonus/: Makefile  README.md  encoder_pwmOut.c  encoder_pwmOut.elf  encoder_pwmOut.hex  radar_pwmOut.c  radar_pwmOut.elf  test.elf  test.hex
